Fixed flexbox properties in order to make the containers work properly on smaller screens - Исправлены свойства flexbox для правильной работы контейнеров на небольших экранах

--- a/styles/main.css
+++ b/styles/main.css
@@ -176,13 +176,16 @@ footer small {
 /********** page-wrapper **********/
 
 .page-wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     width: 100%;
     height: 100%;
     margin: 0 auto;
     padding: 0 10px;
     max-width: 1200px;
     box-sizing: border-box;
-    display: flex;
     flex-direction: column;
 }
 
@@ -222,15 +225,21 @@ footer small {
 .article-holder {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
     padding: 10px 0;
     margin: 30px 0 0 0;
 }
 
 .article-holder article {
     background: #ffffff;
-    margin: 10px 0 0 0;
-    flex-basis: calc(33% - 4px);
+    margin: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 300px;
 }
 
 .article-holder article a {
@@ -246,6 +255,7 @@ footer small {
     font-size: 14px;
     color: #7d7d7d;
     flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .article-holder article h2 {
@@ -258,7 +268,7 @@ footer small {
     width: 100%;
     height: auto;
     opacity: 1;
-    transition: .3s
+    transition: .3s;
 }
 
 .article-holder article:hover img {
